deploy/k8s/apps/user-management/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management
  namespace: myapp
  labels:
    app: user-management
spec:
  selector:
    app: user-management
  ports:
    - port: 8081
      targetPort: 8081
      name: http
  type: ClusterIP
