deploy/k8s/apps/user-management/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management
  namespace: myapp
  labels:
    app: user-management
spec:
  ingressClassName: traefik
  rules:
    - host: users.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-management
                port:
                  number: 8081
